--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
   ],
   "license": "ISC",
   "dependencies": {
+    "@next-auth/sequelize-adapter": "^1.0.2",
     "next": "^12.0.11-canary.4",
     "next-auth": "latest",
     "nodemailer": "^6.6.3",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "sequelize": "^6.16.2",
+    "sqlite3": "^5.0.2"
   },
   "devDependencies": {
     "@types/node": "^17.0.14",
