--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@types/node": "^17.0.14",
     "@types/react": "^17.0.39",
+    "fake-smtp-server": "^0.8.0",
     "typescript": "^4.5.5"
   },
   "prettier": {
